# period-predictor

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  original_data.txt  raw_data.txt
src/: main.rs  parse.rs  plot.rs  predict.rs
