[package]
name = "period-predictor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
color-eyre = "0.6.2"
nom = "7.1.3"
statrs = "0.16.0"

[dependencies.plotters]
version = "0.3.4"
default-features = false
features = [
	"area_series",
	"bitmap_backend",
	"bitmap_encoder",
	"chrono",
	"datetime",
	"line_series",
	"point_series",
	"svg_backend",
]
